# Nicholson-Cohen-SfN-2023-poster

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
data/configs/ConvTemporalConvNet/: BFSongRepo_allbirds_ConvTemporalConvNet_loss_gstmse_learncurve.toml  BFSongRepo_allbirds_ConvTemporalConvNet_loss_tmse_learncurve.toml  BFSongRepo_allbirds_ConvTemporalConvNet_window_size_1000_learncurve.toml  BFSongRepo_allbirds_ConvTemporalConvNet_window_size_176_learncurve.toml  BFSongRepo_allbirds_ConvTemporalConvNet_window_size_2000_learncurve.toml  BFSongRepo_allbirds_ConvTemporalConvNet_window_size_4000_learncurve.toml  BFSongRepo_allbirds_ConvTemporalConvNet_window_size_64_learncurve.toml
data/configs/TemporalConvNet/: BFSongRepo_allbirds_TemporalConvNet_loss_gstmse_learncurve.toml  BFSongRepo_allbirds_TemporalConvNet_loss_tmse_learncurve.toml  BFSongRepo_allbirds_TemporalConvNet_window_size_1000_learncurve.toml  BFSongRepo_allbirds_TemporalConvNet_window_size_176_learncurve.toml  BFSongRepo_allbirds_TemporalConvNet_window_size_2000_learncurve.toml  BFSongRepo_allbirds_TemporalConvNet_window_size_4000_learncurve.toml  BFSongRepo_allbirds_TemporalConvNet_window_size_64_learncurve.toml
data/configs/TweetyNet/: BFSongRepo_allbirds_TweetyNet_loss_gstmse_learncurve.toml  BFSongRepo_allbirds_TweetyNet_loss_tmse_learncurve.toml  (+5 more)
results/: summary-data-loss-function-experiments.csv  summary-data-window-size-experiments.csv
src/scripts/: learncurve.py  tar-dataset-for-upload.ipynb  tar-loss-function-results-for-upload.ipynb  tar-window-size-results-for-upload.ipynb
(+5 files in other folders)
