[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "framenets"
authors = [{name = "David Nicholson", email = "nickledave@users.noreply.github.com"}]
description = "package to benchmark frame classification models on segmentation and annotation of animal sounds"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.1.0"
dependencies = [
    "pandas==2.0.2",
    "jupyterlab==4.0.1",
    "seaborn==0.12.2",
    "torchinfo==1.8.0",
    # vak gets installed at a specific commit by the nox session before this file is used,
    # but we list the version here for completeness
    "vak==1.0.0a3",
    "vocalpy==0.6.1",
]
